Refactor plotScatterMatrix function to use descriptive variable names

--- a/datascience_principles/assignment/starter-test-case-prioritization-data-4fdfedfb-d.ipynb
+++ b/datascience_principles/assignment/starter-test-case-prioritization-data-4fdfedfb-d.ipynb
@@ -245,19 +245,19 @@
    "outputs": [],
    "source": [
     "# Scatter and density plots\n",
-    "def plotScatterMatrix(df, plotSize, textSize):\n",
-    "    df = df.select_dtypes(include =[np.number]) # keep only numerical columns\n",
+    "def plotScatterMatrix(data_df, plot_size, text_size):\n",
+    "    data_df = data_df.select_dtypes(include =[np.number]) # keep only numerical columns\n",
     "    # Remove rows and columns that would lead to df being singular\n",
-    "    df = df.dropna('columns')\n",
-    "    df = df[[col for col in df if df[col].nunique() > 1]] # keep columns where there are more than 1 unique values\n",
-    "    columnNames = list(df)\n",
+    "    data_df = data_df.dropna('columns')\n",
+    "    data_df = data_df[[col for col in data_df if data_df[col].nunique() > 1]] # keep columns where there are more than 1 unique values\n",
+    "    columnNames = list(data_df)\n",
     "    if len(columnNames) > 10: # reduce the number of columns for matrix inversion of kernel density plots\n",
     "        columnNames = columnNames[:10]\n",
-    "    df = df[columnNames]\n",
-    "    ax = pd.plotting.scatter_matrix(df, alpha=0.75, figsize=[plotSize, plotSize], diagonal='kde')\n",
-    "    corrs = df.corr().values\n",
+    "    data_df = data_df[columnNames]\n",
+    "    ax = pd.plotting.scatter_matrix(data_df, alpha=0.75, figsize=[plot_size, plot_size], diagonal='kde')\n",
+    "    corrs = data_df.corr().values\n",
     "    for i, j in zip(*plt.np.triu_indices_from(ax, k = 1)):\n",
-    "        ax[i, j].annotate('Corr. coef = %.3f' % corrs[i, j], (0.8, 0.2), xycoords='axes fraction', ha='center', va='center', size=textSize)\n",
+    "        ax[i, j].annotate('Corr. coef = %.3f' % corrs[i, j], (0.8, 0.2), xycoords='axes fraction', ha='center', va='center', size=text_size)\n",
     "    plt.suptitle('Scatter and Density Plot')\n",
     "    plt.show()\n"
    ]
